<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="20dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        style="@style/viewParent.headerText.NoMode"
        android:text="Already \nhave an \nAccount?"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_register_hero"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>


    <EditText
        android:id="@+id/etnumber"
        style="@style/modifiedEditText"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/login_number_hint"/>

    <EditText
        android:id="@+id/etPassword"
        style="@style/modifiedEditText"
        android:hint="@string/login_password_hint"
        android:maxLines="1"
        android:inputType="textPassword"/>


<TextView
    style="@style/viewParent"
    android:id="@+id/etforget"
    android:text="Forgot Password?"
    android:textColor="@color/primaryTextColor"
    android:textSize="@dimen/newsMoreTextSize"
    android:layout_gravity="end"
    android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        
        android:id="@+id/btnuserlogin"
        />

<!--     <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton-->
<!--        android:id="@+id/ciruserLoginbtn"-->
<!--        style="@style/loginButton"-->
<!--        app:spinning_bar_width="1dp"-->
<!--        app:spinning_bar_color="#FFF"-->
<!--        android:text="Login"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginTop="@dimen/loginViewsMargin"-->
<!--        app:spinning_bar_padding="30dp"-->
<!--        app:initialCornerAngle="17dp"/>-->

<TextView
    style="@style/parent"

    android:textAlignment="center"
    android:textStyle="bold"
    android:textColor="@color/contentTextColor"
    android:textSize="17sp"
    android:text="New user? Register Now"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:onClick="onLoginClick"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="12"
    android:gravity="center"
    android:layout_marginTop="30dp">

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_weight="3"/>

    <TextView
        style="@style/viewParent.headerText.NoMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use other Methods"
        android:layout_weight="6"
        android:textSize="12sp"
        android:textAlignment="center"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_weight="3"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="20dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_facebook"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google_plus"
        android:layout_marginLeft="10dp"/>
</LinearLayout>

</LinearLayout>
    </ScrollView>
<View
android:layout_marginTop="20dp"
android:layout_alignParentTop="true"
android:layout_alignParentRight="true"
android:layout_width="11dp"
android:layout_height="match_parent"
android:background="@drawable/ic_side_bg"/>

<ImageView
android:layout_alignParentBottom="true"
android:layout_alignParentRight="true"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@drawable/ic_add_img"
android:layout_marginRight="11dp"
android:layout_marginBottom="30dp"
android:onClick="onLoginClick"/>
    </RelativeLayout>