...
            android:layout_marginStart="202dp"
            android:layout_marginTop="190dp"
            android:text="Price"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnadd"
            style="@style/addButton"
            android:layout_width="32dp"
            android:layout_height="37dp"
            android:layout_marginStart="135dp"
            android:layout_marginTop="215dp"
            android:text="+"
...
            android:layout_marginTop="215dp"
            android:text="-"
            android:textSize="20dp" />


        <Button
            android:id="@+id/btncart"
            style="@style/addToCartButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="260dp"
            android:text="Add to cart"
...
