<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_baseline_restaurant_menu_24"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/title_profile" />

</menu>